fixed wrong field alignment for adding location page in mobile version of Clubs addition pop-up

--- a/src/components/addClub/css/AddClubContent.css
+++ b/src/components/addClub/css/AddClubContent.css
@@ -199,8 +199,24 @@
     color:#595959;
 }
 
+@media (max-width: 577px) {
+    .add-club-content .add-club-select .ant-select-selector{
+        width: 499px;
+    }
+    
+}
+
 @media screen and (max-width:577px)  {
     .add-club-content .add-club-input {
         height: 100%;
+    }
+
+    .add-club-content .add-club-select .ant-select-selector {
+        width: 100%;
+    }
+    .add-club-content .add-club-inline{
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
     }
 }
